--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,20 @@ jobs:
     runs-on: ubuntu-latest
     name: Build and Deploy Job
     steps:
-      - uses: actions/checkout@v3
-      - uses: 
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # - name: Azure CLI script
+      #   uses: azure/cli@v2
+      #   with:
+      #     azcliversion: latest
+      #     inlineScript: |
+      #       az account show
+      #       az storage -h
+      #       chmod +x $GITHUB_WORKSPACE/Automate-tetris-app-deployment-to-web-app.sh
+      #       $GITHUB_WORKSPACE/sampleScript.sh
