--- a/.github/workflows/Alijon-Azure DevOps-001-Create an environment with automation script.yml
+++ b/.github/workflows/Alijon-Azure DevOps-001-Create an environment with automation script.yml
@@ -1,4 +1,4 @@
-name: Azure Static Web Apps CI/CD
+name: Alijon-Azure DevOps-001-Create an environment with automation script-CD
 
 on: 
   workflow_dispatch:
