--- a/.github/workflows/Alijon-Azure DevOps-001-Create an environment with automation script.yml
+++ b/.github/workflows/Alijon-Azure DevOps-001-Create an environment with automation script.yml
@@ -16,12 +16,11 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # - name: Azure CLI script
-      #   uses: azure/cli@v2
-      #   with:
-      #     azcliversion: latest
-      #     inlineScript: |
-      #       az account show
-      #       az storage -h
-      #       chmod +x $GITHUB_WORKSPACE/Automate-tetris-app-deployment-to-web-app.sh
-      #       $GITHUB_WORKSPACE/sampleScript.sh
+      - name: Azure CLI script
+        uses: azure/cli@v2
+        with:
+          inlineScript: |
+            az account show
+            az storage -h
+            chmod +x $GITHUB_WORKSPACE/Automate-tetris-app-deployment-to-web-app.sh
+            $GITHUB_WORKSPACE/Automate-tetris-app-deployment-to-web-app.sh
